fix: enforce button text colors
On iOS, some button text was appearing light:
- Disabled button text was too light
- Regular button text was sometimes too light
This has been fixed

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -4,6 +4,11 @@
   border-radius: 3px;
   padding: 0.25rem 0.375rem;
   font-family: inherit;
+  color: inherit;
   display: inline-block;
   margin: 1rem;
+
+  &:disabled {
+    color: gray;
+  }
 }
